--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 HERD
 
-A lot of code has been copied from the perftest benchmarks.
+A lot of code here has been derived from the perftest benchmarks.
 
 This version of HERD has been tested for the following configuration:
 	* Ubuntu 12.04 (kernel 3.2.0)
@@ -8,33 +8,51 @@ This version of HERD has been tested for the following configuration:
 		* I suggest using the MLNX_OFED version for Ubuntu 12.04.
 	* ConnectX3 353A, 354A, and 313A (RoCE)
 
+****************************************************************************
 Initial setup:
-	* Increase the shmmax and shmall parameters by running init.sh
-	* Create hugepages at the server machine. Use the hugepage-create.sh script
-	  in the scripts folder.
 
+1. The HERD folder should be a subdir in your home directory. This is required 
+by the bash scripts. Create this folder on the server machine and mount it at
+all clients via NFS.
+
+2. Add the scripts folder to your PATH.
+
+3. Increase the shmmax and shmall parameters to very large values by running init.sh
+
+4. Create hugepages at the server machine. Use the hugepage-create.sh script
+in the scripts folder. I suggest creating 4096 hugepages on each socket.
+
+*****************************************************************************
 Quick start:
-	* I assume that the machines are named: node-$i.RDMA.fawn.apt.emulab.net.
-		* The experiment requires at least (1 + NUM_CLIENTS / num_processes) nodes.
-		  NUM_CLIENTS is the total number of client processes, defined in common.h.
-		  num_processes is the number of client processes per machine, defined in
-		  run-machine.sh.
 
-	* Run make (or do.sh) at every machine build the executables
+1. I assume that the machines are named: node-$i.RDMA.fawn.apt.emulab.net.
+		The experiment requires at least (1 + (NUM_CLIENTS / num_processes)) machines.
+		NUM_CLIENTS is the total number of client processes, defined in common.h.
+		num_processes is the number of client processes per machine, defined in
+		run-machine.sh.
 
-	* Run ./run-servers.sh at node-0. The script will ssh into all the client machines
-	  (NUM_CLIENT_MACHINES in number) and run the run_machine.sh script.
+2. Run make (or do.sh) at every machine build the executables
 
-	* If you do not want to run clients automatically from the server, delete
-	  the 2nd loop from run-servers.sh. Then:
-			* At the server: ./run-server.sh
-			* At clients: ./run-machine.sh 0
-						  ./run-machine.sh 1
-						  ...
+3. Run ./run-servers.sh at node-0. The script will ssh into all the client machines
+(NUM_CLIENT_MACHINES in number) and run the run_machine.sh script.
 
-	* To kill the server processes, run kill.sh at the server machine.
-	* To kill the client processes, run bomb.sh at the server machine.
+4. If you do not want to run clients automatically from the server, delete the 
+2nd loop from run-servers.sh. Then:
+		At the server:		./run-server.sh
+		At clients:			./run-machine.sh 0
+							./run-machine.sh 1
+							...
 
+5. To kill the server processes, run kill.sh at the server machine. To kill the 
+client processes remotely, run bomb.sh at the server machine.
+
+
+
+
+
+
+
+*******************************************************************************
 Algorithm details:
 
 SERVER's ALGORITHM (one iteration)
